Add check for --disable-frame-rate-limit

The flag is not respected with OOP-D, so read the flag and send it to
the GPU process.

Bug: 841801
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel
Change-Id: I87644f9c10a04491289f9fe89b8cbbd9584bfb2a
Reviewed-on: https://chromium-review.googlesource.com/1228497
Commit-Queue: Sean Gilhuly <sgilhuly@chromium.org>
Reviewed-by: kylechar <kylechar@chromium.org>
Reviewed-by: Antoine Labour <piman@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Cr-Commit-Position: refs/heads/master@{#592029}
Former-commit-id: 21d96a446fd3586615e3a2f291ba015518539634